--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@oslojs/crypto": "^1.0.1",
+    "@oslojs/encoding": "^1.1.0",
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "arctic": "^2.0.1",
     "geist": "^1.3.0",
     "next": "^14.2.4",
     "react": "^18.3.1",
