--- a/package.json
+++ b/package.json
@@ -51,12 +51,14 @@
     "lucide-react": "^0.453.0",
     "next": "^14.2.4",
     "next-nprogress-bar": "^2.3.14",
+    "next-themes": "^0.4.3",
     "pg": "^8.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-infinite-scroll-component": "^6.1.0",
     "server-only": "^0.0.1",
+    "sonner": "^1.7.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
