--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.1",
     "framer-motion": "^11.11.11",
     "geist": "^1.3.0",
@@ -54,6 +55,7 @@
     "next-themes": "^0.4.3",
     "pg": "^8.13.1",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-infinite-scroll-component": "^6.1.0",
