--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "next": "^14.2.4",
     "next-nprogress-bar": "^2.3.14",
     "next-themes": "^0.4.3",
+    "papaparse": "^5.5.1",
     "pg": "^8.13.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -69,6 +70,7 @@
   "devDependencies": {
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.10",
+    "@types/papaparse": "^5.3.15",
     "@types/pg": "^8.11.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
